force-app/main/default/objects/Order_Mapper__mdt/Order_Mapper__mdt.object-meta.xml
<CustomObject>
    <label>Order Mapper</label>
    <pluralLabel>Order Mapper</pluralLabel>
</CustomObject>