force-app/main/default/objects/Order_Mapper__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate the order manager configuration.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>