force-app/main/default/objects/Order_Mapper__mdt/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <description>Order field used to selectively filters orders that are considered for the creation of target objects.</description>
    <label>Field1</label>
    <length>125</length>
    <type>Text</type>
</CustomField>