force-app/main/default/objects/Order_Mapper__mdt/fields/Field3_Value__c.field-meta.xml
<CustomField>
    <fullName>Field3_Value__c</fullName>
    <description>Field value associated to the field used to selectively filters orders that are considered for the creation of target objects.</description>
    <label>Field3 Value</label>
    <length>125</length>
    <type>Text</type>
</CustomField>