force-app/main/default/objects/Order_Mapper__mdt/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>