force-app/main/default/objects/Order_Mapper__mdt/fields/Source_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_Record_Type__c</fullName>
    <label>Source Object Record Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>