force-app/main/default/objects/Order_Mapper__mdt/fields/Target_Object2__c.field-meta.xml
<CustomField>
    <fullName>Target_Object2__c</fullName>
    <label>Target Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>