force-app/main/default/objects/Order_Mapper__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>API name of the Target Object.</description>
    <label>Target Object</label>
    <length>125</length>
    <required>true</required>
    <type>Text</type>
</CustomField>